fixed tymebank not showing bug

--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -16,3 +16,7 @@
     background-color: #035c00 !important;
     color: #fff;
 }
+.tymebank{
+    background-color: rgb(238, 238, 14) !important;
+    color: #fff;
+}
